content/_generated-doc/3.0/config/quarkus-resteasy-multipart.adoc

:summaryTableId: quarkus-resteasy-multipart
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-resteasy-multipart_configuration]]link:#quarkus-resteasy-multipart_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-resteasy-multipart_quarkus.resteasy.multipart.input-part.default-charset]]`link:#quarkus-resteasy-multipart_quarkus.resteasy.multipart.input-part.default-charset[quarkus.resteasy.multipart.input-part.default-charset]`

[.description]
--
Default charset. 
Note that the default value is UTF-8 which is different from RESTEasy's default value US-ASCII.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_RESTEASY_MULTIPART_INPUT_PART_DEFAULT_CHARSET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_RESTEASY_MULTIPART_INPUT_PART_DEFAULT_CHARSET+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/nio/charset/Charset.html[Charset]
 
|`UTF-8`


a| [[quarkus-resteasy-multipart_quarkus.resteasy.multipart.input-part.default-content-type]]`link:#quarkus-resteasy-multipart_quarkus.resteasy.multipart.input-part.default-content-type[quarkus.resteasy.multipart.input-part.default-content-type]`

[.description]
--
The default content-type.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_RESTEASY_MULTIPART_INPUT_PART_DEFAULT_CONTENT_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_RESTEASY_MULTIPART_INPUT_PART_DEFAULT_CONTENT_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`text/plain`

|===